// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main suite render sublist when click on element 1 1`] = `
<div>
  <ion-list>
    <ion-item
      button="true"
      color="tertiary"
      data-id="element-1"
      data-test="element-1"
    >
      <ion-label
        data-id="element-1"
      >
        1 Fachinhalte
      </ion-label>
      <ion-badge
        color="primary"
        data-id="element-1"
      >
        1/2
      </ion-badge>
    </ion-item>
    <ion-item>
      <ion-text
        class="ion-padding-top ion-padding-bottom"
        color="medium"
      >
        Die Lehrperson verfügt über fachwissenschaftliches und fachdidaktisches Wissen, versteht die Inhalte, Strukturen und zentralen Forschungsmethoden ihrer Fachbereiche und sie kann Lernsituationen schaffen, die die fachwissenschaftlichen und fachdidaktischen Aspekte für die Lernenden bedeutsam machen.
      </ion-text>
    </ion-item>
    <ion-list>
      <ion-item
        button="true"
        data-id="1.1 Fachwissen und Didaktik"
        data-test="element-1.1"
      >
        <ion-label
          data-id="1.1 Fachwissen und Didaktik"
        >
          1.1 Fachwissen und Didaktik
        </ion-label>
        <ion-icon
          color="medium"
          data-id="1.1 Fachwissen und Didaktik"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z' stroke-miterlimit='10' class='ionicon-fill-none ionicon-stroke-width'/><path stroke-linecap='round' stroke-linejoin='round' d='M352 176L217.6 336 160 272' class='ionicon-fill-none ionicon-stroke-width'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="1.2 Fachwissen und Didaktik"
        data-test="element-1.2"
      >
        <ion-label
          data-id="1.2 Fachwissen und Didaktik"
        >
          1.2 Fachwissen und Didaktik
        </ion-label>
        <ion-icon
          color="success"
          data-id="1.2 Fachwissen und Didaktik"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
    </ion-list>
    <ion-item
      button="true"
      data-id="element-2"
      data-test="element-2"
    >
      <ion-label
        color="medium"
        data-id="element-2"
      >
        2 Entwicklungsprozesse
      </ion-label>
      <ion-badge
        color="success"
        data-id="element-2"
      >
        2/2
      </ion-badge>
    </ion-item>
  </ion-list>
  <ion-button
    data-id="Später wählen"
    data-test="choseLater"
  >
    Später wählen
  </ion-button>
</div>
`;

exports[`main suite render sublist when click on element 2 1`] = `
<div>
  <ion-list>
    <ion-item
      button="true"
      data-id="element-1"
      data-test="element-1"
    >
      <ion-label
        color="medium"
        data-id="element-1"
      >
        1 Fachinhalte
      </ion-label>
      <ion-badge
        color="primary"
        data-id="element-1"
      >
        1/2
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      color="tertiary"
      data-id="element-2"
      data-test="element-2"
    >
      <ion-label
        data-id="element-2"
      >
        2 Entwicklungsprozesse
      </ion-label>
      <ion-badge
        color="success"
        data-id="element-2"
      >
        2/2
      </ion-badge>
    </ion-item>
    <ion-item>
      <ion-text
        class="ion-padding-top ion-padding-bottom"
        color="medium"
      >
        Die Lehrperson versteht, wie Kinder und Erwachsene lernen und sich entwickeln, und sie kann Lerngelegenheiten und Lernwege anbieten, welche die kognitive, soziale und persönliche Entwicklung unterstützen.
      </ion-text>
    </ion-item>
    <ion-list>
      <ion-item
        button="true"
        data-id="2.1 Entwicklung der Lernenden"
        data-test="element-2.1"
      >
        <ion-label
          data-id="2.1 Entwicklung der Lernenden"
        >
          2.1 Entwicklung der Lernenden
        </ion-label>
        <ion-icon
          color="success"
          data-id="2.1 Entwicklung der Lernenden"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="2.2 Erfahrungen und Vorwissen"
        data-test="element-2.2"
      >
        <ion-label
          data-id="2.2 Erfahrungen und Vorwissen"
        >
          2.2 Erfahrungen und Vorwissen
        </ion-label>
        <ion-icon
          color="success"
          data-id="2.2 Erfahrungen und Vorwissen"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
    </ion-list>
  </ion-list>
  <ion-button
    data-id="Später wählen"
    data-test="choseLater"
  >
    Später wählen
  </ion-button>
</div>
`;

exports[`main suite renders without crashing 1`] = `
<div>
  <ion-list>
    <ion-item
      button="true"
      data-id="element-1"
      data-test="element-1"
    >
      <ion-label
        data-id="element-1"
      >
        1 Fachinhalte
      </ion-label>
      <ion-badge
        color="primary"
        data-id="element-1"
      >
        1/2
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="element-2"
      data-test="element-2"
    >
      <ion-label
        data-id="element-2"
      >
        2 Entwicklungsprozesse
      </ion-label>
      <ion-badge
        color="success"
        data-id="element-2"
      >
        2/2
      </ion-badge>
    </ion-item>
  </ion-list>
  <ion-button
    data-id="Später wählen"
    data-test="choseLater"
  >
    Später wählen
  </ion-button>
</div>
`;
